--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: Contract implementation
-subtitle: Learn how to deliver different subsets of your enterprise supergraph
+subtitle: Learn how to create, edit, and validate contracts in GraphOS
 description: GraphOS contracts allow you to deliver subsets of your federated graph to consumers using the @tag directive.
 ---
 
