--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -12,9 +12,11 @@ These rules enforce naming conventions. Rules are categorized by the part(s) of 
 
 ### Fields
 
-#### `FIELD_NAMES_SHOULD_BE_CAMEL_CASE`
-
-Field names should always use `camelCase`.
+<RuleExpansionPanel
+  title="FIELD_NAMES_SHOULD_BE_CAMEL_CASE"
+  whatItDoes="Checks that all field names use camel case."
+  rationale="Camel case is a common convention for field names in GraphQL."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -36,19 +38,12 @@ type User {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `RESTY_FIELD_NAMES`
-
-A field's name should never start with any of the following verbs:
-
-- `get`
-- `list`
-- `post`
-- `put`
-- `patch`
-
-Most fields should not start with _any_ verb, with the exception of `Mutation` fields. For `Mutation` fields, use a verb that more specifically describes the action being performed (such as `create`, `delete`, or `edit`).
+<RuleExpansionPanel
+  title="RESTY_FIELD_NAMES"
+  whatItDoes={`Checks that field's name don't start with any of the following verbs: "get," "list," "post," "put," "patch."`}
+  rationale={`Most fields should not start with any verb, with the exception of mutation fields. For mutation fields, it's best to use a verb that more specifically describes the action being performed, for example, "create," "delete," or "edit."`}>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -66,6 +61,8 @@ type Query {
 }
 ```
 
+</RuleExpansionPanel>
+
 ### Types
 
 These rules apply to _all_ types that appear in a GraphQL schema, including:
@@ -76,9 +73,11 @@ These rules apply to _all_ types that appear in a GraphQL schema, including:
 - Enums
 - Unions
 
-#### `TYPE_NAMES_SHOULD_BE_PASCAL_CASE`
-
-All type names should use `PascalCase`.
+<RuleExpansionPanel
+  title="TYPE_NAMES_SHOULD_BE_PASCAL_CASE"
+  whatItDoes='Checks that all type names use "Pascal case.'
+  rationale="Pascal case is a common convention for type names in GraphQL."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -100,11 +99,13 @@ type StreamingService { # PascalCase
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `TYPE_PREFIX`
-
-Type names should never use the prefix `Type`.
+<RuleExpansionPanel
+  title="TYPE_PREFIX"
+  whatItDoes="Checks that type names don't use the prefix `Type`."
+  rationale="Starting type names with `Type` can make your schema definitions verbose. It can be redundant and make the schema harder to read and understand."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -122,11 +123,13 @@ type Book { # highlight-line
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `TYPE_SUFFIX`
-
-Type names should never use the suffix `Type`.
+<RuleExpansionPanel
+  title="TYPE_SUFFIX"
+  whatItDoes="Checks that type names don't use the suffix `Type`."
+  rationale="Adding `Type` as a suffix to your type names can be redundant and make your schema definitions longer than necessary. This can make the schema more verbose and less readable."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -144,11 +147,16 @@ type Book { # highlight-line
 }
 ```
 
+</RuleExpansionPanel>
+
+
 ### Objects
 
-#### `OBJECT_PREFIX`
-
-An object type's name should never use the prefix `Object`.
+<RuleExpansionPanel
+  title="OBJECT_PREFIX"
+  whatItDoes="Checks that object type's name don't use the prefix `Object`."
+  rationale="Adding `Object` as a prefix to object names can be redundant and make your schema definitions longer than necessary. This can make the schema more verbose and less readable."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -166,11 +174,13 @@ type Book { # highlight-line
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `OBJECT_SUFFIX`
-
-An object type's name should never use the suffix `Object`.
+<RuleExpansionPanel
+  title="OBJECT_SUFFIX"
+  whatItDoes="An object type's name should never use the suffix `Object`."
+  rationale="Adding `Object` as a suffix to object names can be redundant and make your schema definitions longer than necessary. This can make the schema more verbose and less readable."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -188,11 +198,16 @@ type Book { # highlight-line
 }
 ```
 
+</RuleExpansionPanel>
+
+
 ### Interfaces
 
-#### `INTERFACE_PREFIX`
-
-An interface type's name should never use the prefix `Interface`.
+<RuleExpansionPanel
+  title="INTERFACE_PREFIX"
+  whatItdoes="Checks that interface type names don't use the prefix `Interface`."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -212,11 +227,13 @@ interface Book { # highlight-line
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `INTERFACE_SUFFIX`
-
-An interface type's name should never use the suffix `Interface`.
+<RuleExpansionPanel
+  title="INTERFACE_SUFFIX"
+  whatItDoes={`Checks that interface type names don't use the suffix "Interface"`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -236,11 +253,16 @@ interface Book { # highlight-line
 }
 ```
 
+</RuleExpansionPanel>
+
+
 ### Inputs & arguments
 
-#### `INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE`
-
-A GraphQL argument's name should always use `camelCase`.
+<RuleExpansionPanel
+  title="INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE"
+  whatItDoes={`Checks that GraphQL argument names use camel case.`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -262,11 +284,13 @@ type Mutation {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `INPUT_TYPE_SUFFIX`
-
-An input type's name should always use the suffix `Input`.
+<RuleExpansionPanel
+  title="INPUT_TYPE_SUFFIX"
+  whatItDoes={`An input type's name should always use the suffix "input."`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -286,11 +310,15 @@ input BlogPostDetailsInput { #highlight-line
 }
 ```
 
+</RuleExpansionPanel>
+
 ### Enums
 
-#### `ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE`
-
-Enum values should always use `SCREAMING_SNAKE_CASE`.
+<RuleExpansionPanel
+  title="ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE"
+  whatItDoes={`Checks that enum values use screaming snake case.`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -312,11 +340,13 @@ enum Amenity {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `ENUM_PREFIX`
-
-An enum type's name should never use the prefix `Enum`.
+<RuleExpansionPanel
+  title="ENUM_PREFIX"
+  whatItDoes={`Check that enum type names don't use the prefix "enum".`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -338,11 +368,13 @@ enum Residence { # highlight-line
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `ENUM_SUFFIX`
-
-An enum type's name should never use the suffix `Enum`.
+<RuleExpansionPanel
+  title="ENUM_SUFFIX"
+  whatItDoes={`Checks that enum type names don't use the suffix "enum".`}
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -364,11 +396,13 @@ enum Residence { # highlight-line
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `ENUM_USED_AS_INPUT_WITHOUT_SUFFIX`
-
-If an enum type is used as an input argument, its name _should_ use the suffix `Input`.
+<RuleExpansionPanel
+  title="ENUM_USED_AS_INPUT_WITHOUT_SUFFIX"
+  whatItDoes="If an enum type is used as an input argument, checks that its name uses the suffix `Input`."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -396,11 +430,13 @@ type Query {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX`
-
-If an enum is used as the return type of a _non_-input field, its name _should not_ use the suffix `Input`.
+<RuleExpansionPanel
+  title="ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX"
+  whatItDoes="If an enum is used as the return type of a _non_-input field, checks that its name doesn't use the suffix `Input`."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -428,11 +464,15 @@ type Query {
 }
 ```
 
+</RuleExpansionPanel>
+
 ### Directives
 
-#### `DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE`
-
-Directive names should always use `camelCase`.
+<RuleExpansionPanel
+  title="DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE"
+  whatItDoes="Checks that directive use camel case."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -446,7 +486,7 @@ directive @SpecialField on FIELD_DEFINITION # PascalCase
 directive @specialField on FIELD_DEFINITION # camelCase
 ```
 
-<hr />
+</RuleExpansionPanel>
 
 <MinVersion version="2.4">
 
@@ -482,15 +522,19 @@ These rules define conventions for the entire schema and directive usage outside
 
 These rules apply to the entire schema.
 
-#### `DOES_NOT_PARSE`
+<RuleExpansionPanel
+  title="DOES_NOT_PARSE"
+  whatItDoes="Checks for malformed GraphQL schemas. Check your schema for any syntax errors."
+  rationale={` `}
+>
 
-The schema linter raises this violation if it attempts to read a malformed GraphQL schema. Check your schema for any syntax errors.
+</RuleExpansionPanel>
 
-<hr />
-
-#### `ALL_ELEMENTS_REQUIRE_DESCRIPTION`
-
-Each element in the schema must include a description.
+<RuleExpansionPanel
+  title="ALL_ELEMENTS_REQUIRE_DESCRIPTION"
+  whatItDoes="Checks that each element in the schema includes a description."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -510,13 +554,13 @@ type User {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `DEFINED_TYPES_ARE_USED`
-
-Every type defined in a schema should be used at least once.
-
-Unused types commonly appear after you refactor other parts of your schema. You should remove unused types to prevent confusion.
+<RuleExpansionPanel
+  title="DEFINED_TYPES_ARE_USED"
+  whatItDoes="Checks that every type defined in a schema is be used at least once."
+  rationale="Unused types commonly appear after you refactor other parts of your schema. You should remove unused types to prevent confusion."
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -547,11 +591,13 @@ type Query {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `QUERY_DOCUMENT_DECLARATION`
-
-A GraphQL schema should never include definitions of GraphQL _operations_ (such as queries and mutations).
+<RuleExpansionPanel
+  title="QUERY_DOCUMENT_DECLARATION"
+  whatItDoes="Checks that GraphQL schemas never include definitions of GraphQL _operations_ (such as queries and mutations)."
+  rationale={` `}
+>
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -570,11 +616,17 @@ query GetUsers {
 #highlight-end
 ```
 
+</RuleExpansionPanel>
+
 ### Directives
 
-#### `CONTACT_DIRECTIVE_MISSING`
+<RuleExpansionPanel
+  title="CONTACT_DIRECTIVE_MISSING"
+  whatItDoes="Checks that the subgraph schemas always provide owner contact details via the `@contact` directive. [Learn more.](../graphs/federated-graphs#contact-info-for-subgraphs)"
+  rationale={` `}
+>
 
-A subgraph schema should always provide owner contact details via the `@contact` directive. [Learn more.](../graphs/federated-graphs#contact-info-for-subgraphs)
+
 
 <p style="margin-bottom: 0">✅</p>
 
@@ -596,11 +648,15 @@ extend schema
   )
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `DEPRECATED_DIRECTIVE_MISSING_REASON`
+<RuleExpansionPanel
+  title="DEPRECATED_DIRECTIVE_MISSING_REASON"
+  whatItDoes="Checks that the `@deprecated` directive always includes a `reason` argument."
+  rationale={` `}
+>
 
-The `@deprecated` directive should always include a `reason` argument.
+
 
 <p style="margin-bottom: 0">❌</p>
 
@@ -620,8 +676,12 @@ type Product {
 }
 ```
 
-<hr />
+</RuleExpansionPanel>
 
-#### `TAG_DIRECTIVE_USES_UNKNOWN_NAME`
+<RuleExpansionPanel
+  title="TAG_DIRECTIVE_USES_UNKNOWN_NAME"
+  whatItDoes="Checks that the `@tag` directive should always use an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#configuring-the-linter)."
+  rationale={` `}
+>
 
-The `@tag` directive should always use an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#configuring-the-linter).
+</RuleExpansionPanel>
