--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice-troubleshooting.mdx
@@ -2,7 +2,11 @@
 title: AWS Lattice troubleshooting guide
 ---
 
-> Cloud Dedicated is currently in invite-only [preview](./#private-preview). Don't hesitate to [get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions or feedback.
+<PreviewFeature>
+
+Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to [get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
 
 To learn how to configure AWS VPC Lattice to send traffic to your subgraphs, refer to the [configuration docs](./lattice).
 
