--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -2,7 +2,11 @@
 title: Cloud Dedicated
 ---
 
-> Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to [get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions or feedback.
+<PreviewFeature>
+
+Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to [get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions or feedback.
+
+</PreviewFeature>
 
 **Cloud Dedicated** is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of Apollo Routers. This approach lets you implement and scale your supergraph without managing any additional infrastructure. Tailored for teams handling production-grade workloads, Cloud Dedicated offers additional control over performance and security.
 
@@ -30,6 +34,12 @@ Cloud Dedicated pricing is based on the amount of **Graph Compute Units**(GCUs) 
 GCUs run on AWS in the region of your choice. You can scale them via [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) or the [GraphOS Platform API](/graphos/platform-api/).
 
 ### GCU performance
+
+<Note>
+
+While Cloud Dedicated is in [preview](#private-preview), these performance expectations may change.
+
+</Note>
 
 From a single GCU, you can expect the following performance:
 
