Correct delivery explanation and links

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -18,9 +18,9 @@ GraphOS provides the following schema governance tools:
 
 ## Schema delivery
 
-Schema delivery refers to the process of making your supergraph schema available to clients. GraphOS requires you to [publish schema changes using the Rover CLI](./publication). Publication happens via a CLI command so you can readily integrate it into your continuous delivery pipeline.
+Schema delivery refers to the process of making your supergraph schema available to clients. You can publish schema changes [using the Rover CLI](./publishing-schemas) or [GraphOS Platform API](/graphos/platform-api). Using the Rover CLI command enables you to easily integrate publication into your continuous delivery pipeline.
 
-To incorporate other important aspects of your supergraph configuration, such as your router configuration or federation version, GraphOS uses the concept of [**launches**](./launches). Schema publications trigger launches, and you can monitor them from the Launches page in GraphOS Studio.
+To incorporate other important aspects of your supergraph configuration, such as your router configuration or federation version, GraphOS uses the concept of [**launches**](./launches). Schema publications trigger launches, and you can monitor them from the **Launches** page in GraphOS Studio.
 
 <img className="screenshot" src="../img/launches-page.jpg" width="500" />
 
